# marp-pptx

./: .gitignore  README.md  mypy.ini  pyproject.toml
src/: convert.py
